# emulator-test

./: .gitignore  CMakeLists.txt  Makefile  README.md  action.h  event.c  event.h  main.c  scheduler.c  worker.c  worker.h
eval-scripts/: buffer_test.sh  client-run.sh  process_bbr.sh  process_name.sh  server-run.sh
input/: old_fix.py  trace-0.csv  trace-1-c.csv  trace-1-client.csv  trace-1-s.csv  trace-1-server.csv  trace-1.csv  trace-10-c.csv  trace-10-s.csv  trace-10.csv  trace-11-c.csv  trace-11-s.csv  trace-11.csv  trace-12-c.csv  trace-12-s.csv  trace-12.csv  trace-13-c.csv  trace-13-s.csv  trace-13.csv  trace-2-c.csv  trace-2-s.csv  trace-2.csv  trace-3-c.csv  trace-3-s.csv  trace-3.csv  trace-4-c.csv  trace-4-s.csv  trace-4.csv  trace-5-c.csv  trace-5-s.csv  trace-5.csv  trace-6-c.csv  trace-6-s.csv  trace-6.csv  trace-7-c.csv  trace-7-s.csv  trace-7.csv  trace-8-c.csv  trace-8-s.csv  trace-8.csv  (+8 more)
lib/lib/: libnetfilter_queue.la  libnfnetlink.la
scripts/: .gitignore  pc_run.sh  ue_run.sh
scripts/fig/: interactive.py  plot.py
scripts/processing/: cal-frame-diff.py  cal-frame.py  compute-iat.py  iperf_fig.py  metrics.py  parse-logs.py  plot-logs.py  plot_loss.py  rfc-jitter.py  (+1 more)
src/: action.c  emulator.c  event.c  event.h  nfqueue.c  nfqueue.h  scheduler.h  worker.c
var_gap/: trace-1--50-c.csv  trace-1--50-s.csv  trace-1-100-c.csv  trace-1-100-s.csv  trace-1-150-c.csv  trace-1-150-s.csv  trace-1-200-c.csv  trace-1-200-s.csv  trace-2--50-c.csv  trace-2--50-s.csv  trace-2-100-c.csv  trace-2-100-s.csv  trace-2-150-c.csv  trace-2-150-s.csv  trace-2-200-c.csv  trace-2-200-s.csv  trace-3--50-c.csv  trace-3--50-s.csv  trace-3-100-c.csv  trace-3-100-s.csv  trace-3-150-c.csv  trace-3-150-s.csv  trace-3-200-c.csv  trace-3-200-s.csv
(+17 files in other folders)
